# SearchEngine

./: CMakeLists.txt  README.md  config.json  requests.json
SearchEngine/: CMakeLists.txt  converter_json.cpp  converter_json.h  inverted_index.cpp  inverted_index.h  main.cpp  search_server.cpp  search_server.h
SearchEngine_tests/: CMakeLists.txt  test_main.cpp
docs/: doc1.txt  doc2.txt  doc3.txt
